@@ -109,7 +109,7 @@ sub getUpLinks {
     my ($this) = @_;
     my @upLinks;
 
-    if ( @{ $this->{_uplink} }[0] eq 'Dynamic' ) {
+    if ( lc(@{ $this->{_uplink} }[0]) eq 'dynamic' ) {
         @upLinks = $this->getTrunkPorts();
     } else {
         @upLinks = @{ $this->{_uplink} };
